Add delete the a notice via user
